--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,416 +1,249 @@
+
+
 body {
-    background-image: url(../images/qbkls.png);
-    margin-bottom: 90px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
+    background-image: linear-gradient(to right, #F7B7B7, #85D6CB);
+    background-repeat: none;
+   color: whitesmoke;
+   height: 110vh;
+   font-family: 'Roboto', sans-serif;
 }
+
 
 .clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-
-
-.mainContent {
-    box-sizing: border-box;
-    width: 960px;
-    padding: 20px;
-    margin: 25px auto;
-    background-color: #ffffff;
-    border: 2px solid #dddddd;
-}
-    
+   content: "";
+   clear: both;
+   display: table;
+ }
 
 header {
-    background-color: #ffffff;
-    border-bottom: 1% solid #cccccc;
-    width: 100%;
+   background-color: #F77B77;
+   width: 100%;
+   position: fixed;
+   top: 0;
+   z-index: 600;
 }
 
-nav {
-    float: right;
-    padding-top: 30px;
+#header-nav {
+   width: 80%;
+   margin: 1% 10%;
 }
 
-ul {
-    list-style-type: none;
+#header-nav li {
+   font-size: 20px;
+   padding: 1% 0;
 }
 
-nav li {
-    padding: 5px;
-    float: left;
-}
-nav li:not(:last-child) {
-    border-right: 2px solid #dddddd;
+.main-content {
+   margin: auto;
 }
 
-h1,
+
+#landing-content {
+   color: whitesmoke;
+   height: 30%;
+   margin: auto;
+   width: 80%;
+   height: 70%;
+   margin: auto;
+   padding: 15% 0;
+}
+
+.landing-window{
+   height: 100vh;
+   background-color: #F77B77; 
+   /* box-shadow: 0px 10px 8px 5px grey; */
+}
+.landing-window,
+#portfolio-display,
+#contact-display {
+   padding: 5% 0;
+   position: relative;
+}
+
+#about-me {
+   height: 100vh;
+}
+
+
+.info-div {
+   margin: 10% auto;
+}
+
+
 h2,
-h3 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-weight: bold;
+h3,
+h4, 
+li.info {
+   font-family: 'Roboto Mono', monospace;
+   text-align: center;
 }
 
-h1 {
-    background-color: #4aaaa5;
-    color: #fff;
-    padding: 25px;
-    margin: 0;
-    float: left;
-    font-size: 30px;
-}
+
 
 h2 {
-    color: #4aaaa5;
-    border-bottom: 2px solid #dddddd;
-    padding: 20px 0;
-    margin: 0;
-    font-size: 26px;
+   font-size: 44px;
+   line-height: 2;
+   margin: auto;
+  
 }
 
-
-
-.content {
-    padding: 25px 0;
+h3 {
+   font-size: 34px;
+   margin: 2%;
 }
 
-.aboutMe p {
-    line-height: 2;
-    margin: 0;
-}
-
-#portrait {
-    float: left;
-    height: auto;
-    padding-right: 25px;
-    width: 200px;
-}
-
-/* Hyperlink text styling */
-
-a {
-    text-decoration: none;
-    color: #777777;
-}
-
-a:hover {
-    color: #89B9B6;
-}
-
-a:visited {
-    color: #B7F7F4;
-}
-
-/* Header styling */
-header {
-    background-color: #ffffff;
-    border-bottom: 2px solid #cccccc;
-    width: 100%;
-}
-
-.headerContent {
-    max-width: 960px;
-    margin: auto;
-
-}
-
-
-nav {
-    float: right;
-    padding-top: 25px;
+h4 {
+   font-size: 20px;
+   padding: 2%;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+   margin-top: 2%;
+   display: flex;
+   flex-direction: row;
+   align-content: center;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
 }
 
-li a {
-    padding: 0 10px;
-    float: left;
-}
-li:not(:last-child) {
-    border-right: 2px solid #dddddd;
+p {
+   text-align: center;
+
+   line-height: 1.5;
 }
 
-/* styling for footer*/
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #666666;
-    border-top: 10px solid #4aaaa5;
-    align-content: center;
+#landing-content li {
+   font-size: 24px;
 }
 
-footer p {
-    color: #fff;
-    padding-top: 40px;
-    line-height: 125%;
-    text-align: center;
-}
-/* Main content styling */
+li.info {
+   cursor: pointer;
+   width: 30%;
+   padding: 3% 0;
+   border: 2px solid whitesmoke;
+   text-align: center;}
 
-.mainContent {
-    box-sizing: border-box;
-    width: 960px;
-    padding: 25px;
-    margin: 25px auto;
-    background-color: #ffffff;
-    border: 2px solid #dddddd;
+li.info:hover {
+   background-color: rgba(255, 141, 135, .5);
 }
 
-
-/* styling for about me content */
-
-.content {
-    padding: 25px 0;
+#content-display {
+   margin: 10% auto;
 }
 
-.aboutMe p {
-    line-height: 200%;
-    margin: 0;
+.projects-div {
+   margin: 0 auto;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: center;
 }
-
-#portrait {
-    float: left;
-    height: auto;
-    padding-right: 5%;
-}
-
-
-/* styling for portfolio page */
 
 .project {
-    display: inline-block;
-    margin: 25px 25px 40px 0;
+   height: 40%;
+   width: 32%;
+   background-color: rgba(255, 141, 135, .5);
+   position: relative;
 }
+
+div.text {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 100%;
+   display: inline-block;
+   background-color: rgba(247, 123, 118, .8);
+}
+
+.links {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+}
+
 
 .project img {
-    width: 350px;
-    height: auto;
+   width: 100%;
 }
 
-.projectTitle {
-    position: relative;
-    margin-top: -75px;
-    background-color: #4aaaa5;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-}
-/* styling for contact page */
-
-input[type="text"],
-input[type="email"] {
-    width: 95%;
-    font-size: 14px;
-    color: #777777;
-    padding: 5px;
+.project-info {
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
+   align-items: center;
 }
 
-label {
-    display: block;
-    padding: 20px 0 5px;
+.project-info p {
+   margin: 2%;
 }
 
-textarea {
-    box-sizing: border-box;
-    width: 97%;
-    height: 200px;
-    font-size: 14px;
-    color: #777777;
-}
-input[type="text"],
-input[type="email"],
-textarea {
-border: 2px solid lightgray;
-}
-
-button {
-    display: block;
-    background-color: #4aaaa5;
-    color: #fff;
-    font-size: 16px;
-    padding: 5px 20px;
+.hidden {
+   display: none;
 }
 
 
-@media only screen and (max-width: 980px) {
-    body {
-        margin-bottom: 75px;
-    }
 
-    .mainContent {
-        margin-left: 5%;
-        margin-right: 30%;
-        width: 65%;
-    }
+.portrait {
+   width: 100%;
+   height: auto;
+}
 
-    .headerContent {
-        margin: 0 5%;
-    }
+.float-left {
+   float: left;
+   width: 30%;
+}
 
-    footer {
-        border-top: 5px solid #4aaaa5;
-    }
+.float-left h3 {
+   text-align: right;
+   line-height: 1.5;
+   letter-spacing: 3px;
+}
 
-    footer p {
-        padding: 12px;
-    }
+.float-right {
+   float: right;
+   padding: 5% 5% 5% 0;
+   width: 60%;
+}
+
+.content {
+   background-color: rgba(255, 141, 135, .5);
+   margin: 5% 0;
+   padding: 2%;
+}
+
+.content p {
+   text-align: center;
+   font-size: 18px;
+}
+
+.content li {
+   font-size: 18px;
+   letter-spacing: 2px;
+   padding: 5px;
+   margin: 2%;
+}
+
+img.contact  {
+   width: 64px;
+}
+
+a.contact {
+   padding: 2%;
 
 }
 
-/* tablet view */
-@media only screen and (max-width: 768px) {
-    body {
-        margin-bottom: 90px;
-    }
-
-    .mainContent {
-        width: 95%;
-        margin: 3% auto;
-    }
-
-
-    p {
-        font-size: 16px;
-        line-height: 1.25;
-    }
-
-
-    h1 {
-        font-size: 28px;
-    }
-
-    h2 {
-        font-size: 24px;
-    }
-
-    .headerContent {
-        margin: 0 20px;
-    }
-
-    nav {
-        padding: 15px;
-    }
-
-
-    /* about me page */
-
-    #portrait {
-        width: 45%;
-    }
-
-        /* portfolio page */
-
-    .project {
-        width: 40%;
-        margin: 25px 25px 25px 0;
-    }
-
-    .project img {
-        width: 100%;
-    }
-
-    .projectTitle {
-        padding: 10px;
-        margin-top: -50px;
-    }
-
-
-    footer {
-        padding: 15px;
-        border-top: 5px solid #4aaaa5;
-    }
-
-    footer p {
-        font-size: 12px;
-    }
-
+.contact-buttons {
+   display: flex;
+   flex-direction: row;
+   align-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   justify-content: center;
 }
 
-/* landscape mobile phone */
-@media only screen and (max-width: 640px) {
-    body {
-        width: 100%;
-        margin-bottom: 75px;
-        font-size: 14px;
-    }
-
-    header {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-
-    .headerContent {
-        margin: 0;
-        width: 100%;
-    }
-
-    h1 {
-        padding: 20px 0;
-    }
-
-    nav {
-        float: none;
-        text-align: center;
-    }
-
-    nav li {
-        float: none;
-        display: inline-block;
-    }
-
-    ul a {
-        margin: auto;
-    }
-
-    h1 {
-        width: 100%;
-        margin: 0;
-        float: none;
-        font-size: 22px;
-    }
-
-    h2 {
-        font-size: 18px;
-        padding: 20px 0;
-    }
-
-    #portrait {
-        float: none;
-        width: 100%;
-        padding: none;
-    }
-
-    .mainContent {
-        width: 95%;
-        margin: auto;
-        padding: 10px;
-        line-height: 1.5;
-    }
-
-    footer {
-        width: 100%;
-        padding: 10px;
-        border-top: 5px solid #4aaaa5;
-    }
-
-    .project {
-        width: 95%;
-        height: auto;
-        display: block;
-        margin: 25px auto;
-    }
-
-    a img {
-        width: 100%;
-        height: auto;
-    }
-
+.content,
+#portfolio-div {
+   position: relative;
+   left: 50%;
+transform: translateX(-50%);
 }
