--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ header {
    margin: 1% 10%;
 }
 
+.nav-link {
+   cursor: pointer;
+}
+
 #header-nav li {
    color: whitesmoke;
    font-size: 18px;
@@ -107,6 +111,7 @@ li.info {
 
 h2 {
    font-size: 44px;
+   font-weight: bold;
    line-height: 2;
    margin: auto;
 
@@ -117,9 +122,13 @@ h3 {
    margin: 2%;
 }
 
-h4 {
+h4, h5 {
    font-size: 20px;
    padding: 2%;
+}
+
+h5 {
+   font-weight: bold;
 }
 
 ul {
@@ -136,12 +145,17 @@ p {
    line-height: 1.5;
 }
 
+a {
+   text-decoration: none;
+   color: #F77B77;
+   line-height: 1.2;
+}
+
 #landing-content li {
    font-size: 24px;
 }
 
 li.landing-nav {
-   cursor: pointer;
    width: 30%;
    padding: 3% 0;
    border: 2px solid whitesmoke;
@@ -216,7 +230,7 @@ div.text {
 p.description {
    font-size: 1rem;
    line-height: 1.1;
-   margin-top: 2%;
+   margin: 2% 0;
 }
 
 .hidden {
