--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ li.describe {
 
 .projects-div {
    margin: 0 auto;
+   padding: 1%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
@@ -191,7 +192,6 @@ li.describe {
 .project {
    height: 40%;
    width: 32%;
-   background-color: rgba(255, 141, 135, .5);
    position: relative;
 }
 
